--- a/ansible/templates/logstash.conf.j2
+++ b/ansible/templates/logstash.conf.j2
@@ -8,7 +8,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
+    hosts => ["http://elasticsearchserverIP:9200"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}" 
   }
 }
